--- a/jsdoc/service.js.html
+++ b/jsdoc/service.js.html
@@ -120,6 +120,7 @@ import ResourceCollection from "./collection/resourceCollection.js";
 import EntityCollection from "./collection/entityCollection.js";
 import PaginatedResourceCollection from "./collection/paginatedResourceCollection.js";
 import PaginationFactory from "./collection/paginationFactory.js";
+import PAGINATION_API from "./collection/paginationAPIType.js";
 import Entity from "./model/entity.js";
 import Resource from "./model/resource.js";
 
@@ -170,6 +171,7 @@ Service.ResourceCollection = ResourceCollection;
 Service.EntityCollection = EntityCollection;
 Service.PaginatedResourceCollection = PaginatedResourceCollection;
 Service.PaginationFactory = PaginationFactory;
+Service.PAGINATION_API = PAGINATION_API;
 Service.Entity = Entity;
 Service.Resource = Resource;
 
